<resources>
    <string name="app_name">ZMUX</string>
    <string name="brand">ZMUX</string>
    <string name="connect">connect</string>
    <string name="disconnect">detach</string>
    <string name="attach">ATTACH SESSION</string>
    <string name="new_session">+</string>
    <string name="host_hint">127.0.0.1</string>
    <string name="port_hint">8001</string>
    <string name="token_hint">auth token</string>
    <string name="boot_hint">Token is generated at runtime by security.py.\nadb shell run-as &lt;pkg&gt; cat files/.zmux_auth_token\n(Type \"local\" in Host to test local shell without backend)</string>
</resources>
